# Proyecto_titanic_eq1

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
data/: test.csv  train.csv
models/: setup.py
models/logistic_regression/: log_reg.pkl
notebooks/: nb_actividad.ipynb
src/: config.py  pipeline.py  setup.py
src/cleaning_segregation/: clean_split_data.py
src/cleaning_segregation/utils/: config.py
src/data/: clean_data.py
src/data/utils/: config.py
src/feature_engineering/: feature_engineering.py  pipeline.py
src/feature_engineering/transformers/: transformers_categorical.py  transformers_numerical.py
src/feature_engineering/utils/: config.py  transformers_categorical.py  transformers_numerical.py
src/model_train_score/: model_scoring.py  model_training.py
src/model_train_score/utils/: config.py
