install_requires =
    joblib==1.1.0
    numpy==1.22.3
    pandas==1.4.2
    python-dateutil==2.8.2
    pytz==2022.1
    scikit-learn==1.1.0
    scipy==1.8.0
    six==1.16.0
    threadpoolctl==3.1.0

[metadata]
name = titanic_equipo1
version = 0.1.0
author = Carlos, Erick, Elsy, José
author_email = jimmymflores@gmail.com
description = Deploying Machine Learning Models, unit 3 homework